Add timer. Disable drop squares

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
 }
 
 code {
@@ -46,4 +48,10 @@ code {
 
 .square:focus {
   outline: none;
+}
+
+.drag-timer {
+  position: absolute;
+  width: 10%;
+  z-index: 1;
 }
