--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+@import './features/squares/Squares.css';
+@import './features/hud/HUD.css';
+
+:root {
+  --app-height: 100%;
+}
+
+html, body {
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  height: var(--app-height);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,46 +28,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.board-wrapper {
-  text-align: center;
-}
-
-.board {
-  display: inline-block;
-  position: relative;
-}
-
-.row {
-  display: flex;
-  justify-content: center;
-}
-
-.square {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 
-  2px 0 0 0 #888, 
-  0 2px 0 0 #888, 
-  2px 2px 0 0 #888,   /* Just to fix the corner */
-  2px 0 0 0 #888 inset, 
-  0 2px 0 0 #888 inset;
-  float: left;
-  -webkit-touch-callout: none;
-}
-
-.square-img {
-  width: 80%;
-}
-
-.square:focus {
-  outline: none;
-}
-
-.drag-timer {
-  position: absolute;
-  width: 10%;
-  z-index: 1;
 }
