--- a/src/features/hud/HUD.css
+++ b/src/features/hud/HUD.css
@@ -2,12 +2,15 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    border: 1px solid;
 }
 
 .view-area {
-    height: 40%;
+    height: 40vh;
+    height: calc(var(--app-height) * 0.4);
 }
 
 .game-area {
-    height: 60%;
+    height: 60vh;
+    height: calc(var(--app-height) * 0.6);
 }
