Update settings menu and scene transitions

--- a/src/features/hud/HUD.css
+++ b/src/features/hud/HUD.css
@@ -3,11 +3,20 @@
     flex-direction: column;
     height: 100vh;
     border: 1px solid;
+    position: relative;
+}
+
+.settings-button {
+    width: 10%;
+    position: absolute;
+    left: 2%;
+    top: 2%;
 }
 
 .view-area {
     height: 40vh;
     height: calc(var(--app-height) * 0.4);
+    position: relative;
 }
 
 .game-area {
