Update settings and menu UI

--- a/src/features/MainMenu/MainMenu.css
+++ b/src/features/MainMenu/MainMenu.css
@@ -1,12 +1,9 @@
 .menu {
     height: 100vh;
+    height: var(--app-height);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 1%;
 }
 
 .game-title {
