--- a/src/features/Settings/Settings.css
+++ b/src/features/Settings/Settings.css
@@ -8,9 +8,17 @@
     z-index: 999;
 }
 
+.settings-overlay {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background: grey;
+    z-index: -1;
+    opacity: 0.25;
+}
+
 .settings {
     flex: 1;
-    height: 100%;
     display: flex;
     align-items: center;
     padding: 30%;
